# gfdx

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  changelog.md  index.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh
.github/workflows/: main.yml  python-app.yml  python-publish.yml
app/: requirements.txt
app/web/: app.py
data/: code-name.csv  execution-logs.csv  logs.json  setup.cfg  structures.py
docs/: index.md
gfdx/: app.py  scheduled_jobs.py
gfdx/analysis/: __init__.py  analysis_potential_nutrient_intake.py  foundational_documents.py  gfdx_redcap_algorithm.py  gfdx_redcap_who.py  monitoring.py  potential_nutrient_intake.py  spanish_gfdx_redcap_algorithm.py  spanish_gfdx_redcap_who.py
gfdx/containers/: structures.py  view_file.py
gfdx/web/: app.py
notebooks/: 1_Spanish_gfdx_redcap_algorithm.ipynb  Analysis_ potential nutrient intake.ipynb  Foundational Documents.ipynb  Potential_Nutrient_Intake.ipynb  Spanish_gfdx_redcap_WHO.ipynb  exploring.ipynb  gfdx-redcap-WHO.ipynb  gfdx-redcap-algorithm.ipynb  gfdx_redcap copy.ipynb  gfdx_redcap.ipynb  gfdx_redcap_WHO.ipynb  gfdx_redcap_algorithm.ipynb  monitoring.ipynb
search/: search_index.json
tests/: test_containers.py
