[tool.poetry]
name = "gfdx"
version = "0.1.0"
description = "GFDX project for data modeling and analysis."
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
streamlit = "^0.67.1"
python-dotenv = "^0.14.0"
pydantic = "^1.6.1"
mypy = "^0.782"
flake8 = "^3.8.3"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
