[tool.poetry]
name = "gfdx"
version = "0.1.0"
description = "GFDX Data standardization and simple web application to automate and run analysis."
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "flake8"
flake8 = "^3.8.3"
black = "^20.8b1"
pandas = "^1.1.2"
streamlit = "^0.67.1"
mypy = "^0.782"
pydantic = "^1.6.1"
pytest = "^6.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
